first 100% unit test and successful error free build?

--- a/README.Rmd
+++ b/README.Rmd
@@ -28,13 +28,63 @@ The goal of `rx` is to prescribe `formula` objects with additional attributes.
 
 You can install the released version of rx from [CRAN](https://CRAN.R-project.org) with:
 
-``` r
-install.packages("rx")
+```{r}
+#install.packages("rx")
 ```
 
 And the development version from [GitHub](https://github.com/) with:
 
-``` r
+```{r, eval=FALSE}
 # install.packages("devtools")
 devtools::install_github("asshah4/rx")
 ```
+
+## Usage
+
+The `rx` package is simple, and only has several major functions.
+
+- `rx()`
+- `set_rx_labels()`
+
+It simply adds a layer of attributes to `formula` objects that can help simplify their usage in other packages, particularly in the field of epidemiology and causality-based modeling.
+
+```{r}
+library(rx)
+# Create a simple formula
+f <- mpg ~ wt + hp + cyl
+new_f <- rx(f)
+class(new_f)
+
+# Identifies the roles of individual terms
+term_tbl <- attributes(new_f)$roles
+
+# These can also be listed out as labels if need be
+table_to_list(term_tbl)
+```
+
+For other purposes, the individual terms may need to be labeled. For example, in the `murmur` package, exposures and fixed variables are treated differently.
+
+```{r}
+# This can be done manually
+set_rx_labels(labels = list(
+	X = "exposures",
+	F = "fixed"
+))
+
+f <- mpg ~ X(wt) + hp + F(cyl)
+new_f <- rx(f)
+
+# Identifies the roles of individual terms
+attributes(new_f)$roles %>%
+	table_to_list()
+
+# This can also be done through "themes" based on individual packages
+reset_rx_labels()
+set_rx_theme("murmur")
+f <- mpg ~ X(wt) + hp + F(cyl)
+new_f <- rx(f)
+attributes(new_f)$roles %>%
+	table_to_list()
+```
+
+
