--- a/README.Rmd
+++ b/README.Rmd
@@ -13,35 +13,35 @@ knitr::opts_chunk$set(
 )
 ```
 
-# rx
+# forks
 
 <!-- badges: start -->
-[![Codecov test coverage](https://codecov.io/gh/asshah4/rx/branch/main/graph/badge.svg)](https://codecov.io/gh/asshah4/rx?branch=main)
+[![Codecov test coverage](https://codecov.io/gh/asshah4/forks/branch/main/graph/badge.svg)](https://codecov.io/gh/asshah4/forks?branch=main)
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
-[![R-CMD-check](https://github.com/asshah4/rx/workflows/R-CMD-check/badge.svg)](https://github.com/asshah4/rx/actions)
-[![CRAN status](https://www.r-pkg.org/badges/version/rx)](https://CRAN.R-project.org/package=rx)
+[![R-CMD-check](https://github.com/asshah4/forks/workflows/R-CMD-check/badge.svg)](https://github.com/asshah4/forks/actions)
+[![CRAN status](https://www.r-pkg.org/badges/version/forks)](https://CRAN.R-project.org/package=forks)
 <!-- badges: end -->
 
-The goal of `rx` is to prescribe `formula` objects with additional attributes.
+_Formulas with Operations Prescribed_ are described within the `{forks}` package, $/fɔrks/$, which helps to extend the base R `formula` class.
 
 ## Installation
 
-You can install the released version of rx from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version of `forks` from [CRAN](https://CRAN.R-project.org) with:
 
 ```{r}
-#install.packages("rx")
+#install.packages("forks")
 ```
 
 And the development version from [GitHub](https://github.com/) with:
 
 ```{r, eval=FALSE}
 # install.packages("devtools")
-devtools::install_github("asshah4/rx")
+devtools::install_github("asshah4/forks")
 ```
 
 ## Usage
 
-The `rx` package is simple, and only has several major functions.
+The `forks` package is simple, and only has several major functions.
 
 - `rx()`
 - `set_rx_labels()`
