--- a/README.Rmd
+++ b/README.Rmd
@@ -13,32 +13,32 @@ knitr::opts_chunk$set(
 )
 ```
 
-# asklepian
+# axe
 
 <!-- badges: start -->
-[![Codecov test coverage](https://codecov.io/gh/asshah4/asklepian/branch/main/graph/badge.svg)](https://codecov.io/gh/asshah4/asklepian?branch=main)
+[![Codecov test coverage](https://codecov.io/gh/asshah4/axe/branch/main/graph/badge.svg)](https://codecov.io/gh/asshah4/axe?branch=main)
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
-[![R-CMD-check](https://github.com/asshah4/asklepian/workflows/R-CMD-check/badge.svg)](https://github.com/asshah4/asklepian/actions)
-[![CRAN status](https://www.r-pkg.org/badges/version/asklepian)](https://CRAN.R-project.org/package=asklepian)
+[![R-CMD-check](https://github.com/asshah4/axe/workflows/R-CMD-check/badge.svg)](https://github.com/asshah4/axe/actions)
+[![CRAN status](https://www.r-pkg.org/badges/version/axe)](https://CRAN.R-project.org/package=axe)
 <!-- badges: end -->
 
-_Formulas with prescribed operations_ are described within the `{asklepian}` package, which helps to extend and vectorize the base R `formula` class. The purpose is to help __chop__ a formula-based object into underlying `term` objects, and __rebuild__ it as _prescribed formula_.
+_Formulas with prescribed operations_ are described within the `{axe}` package, which helps to extend and vectorize the base R `formula` class. The purpose is to help __chop__ a formula-based object into underlying `term` objects, and __rebuild__ it as _prescribed formula_.
 
 ## Installation
 
-You can install the released version of `asklepian` from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version of `axe` from [CRAN](https://CRAN.R-project.org) with:
 
 ```{r}
-#install.packages("asklepian")
+#install.packages("axe")
 ```
 
 And the development version from [GitHub](https://github.com/) with:
 
 ```{r, eval=FALSE}
 # install.packages("devtools")
-devtools::install_github("asshah4/asklepian")
+devtools::install_github("asshah4/axe")
 ```
 
 ## Usage
 
-The `asklepian` package is simple, and only has several major functions.
+The `axe` package is simple, and only has several major functions.
